Add multi-select form inputs with 'other' options

--- a/src/components/Success/Success.css
+++ b/src/components/Success/Success.css
@@ -1,4 +1,4 @@
-.Homepage header {
+.Success header {
   background-image: url('/public/header1.jpg');
   background-size: cover;
   background-position: center;
