--- a/src/components/Success/Success.css
+++ b/src/components/Success/Success.css
@@ -1,5 +1,5 @@
 .Success header {
-  background-image: url('/public/header1.jpg');
+  background-image: url('/public/header1.png');
   background-size: cover;
   background-position: center;
   height: 300px;
