--- a/src/components/Webform/Webform.css
+++ b/src/components/Webform/Webform.css
@@ -31,6 +31,10 @@
   font-size: 1.2em;
 }
 
+.Webform .explanatory-note {
+  margin: 0 0 0.4em 1em;
+}
+
 .Webform fieldset {
   display: flex;
   flex-direction: column;
