--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,9 +17,9 @@
 
 .Footer .logos img {
   display: inline-block;
-  margin: 5px;
+  margin: 0;
   height: 10vw;
-  min-height: 60px;
+  min-height: 98px;
   max-height: 120px;
   width: auto;
   /* border: 1px solid yellow; */
